--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	</header>
 	<h3>About</h3>
   <p>I am a third-year pure mathematics student at the University of Toronto. Right now, I'm working at the Massachusetts Institute of Technology on the theory of quantum algorithmic primitives, under the supervision of
-      <a href="https://scholar.google.com/citations?user=QKyb_9oAAAAJ&hl=en"> Professor Isaac Chuang</a>.
+      <a href="https://scholar.google.com/citations?user=QKyb_9oAAAAJ&hl=en" style="color:red;"> Professor Isaac Chuang</a>.
       Before this, I was the first non-founding employee at a stealth quantum/machine learning startup (I took a gap year from 2022-2023 to do this), and
       before that I was a research intern at <a href="https://www.xanadu.ai/">Xanadu</a>, a quantum computing company located in Toronto, developing
       quantum algorithms for performing chemical calculations.
@@ -50,3 +50,12 @@
         </body>
 
 </html>
+<style>
+  body {
+    background-color: black;
+    color:white;
+  }
+  a {
+    color:red !important;
+  }
+</style>
