--- a/index.html
+++ b/index.html
@@ -17,22 +17,25 @@
 		</center>
 	</header>
 	<h3>About</h3>
-  <p>I am a third-year pure mathematics student at the University of Toronto. Right now, I'm working at the Massachusetts Institute of Technology on the theory of quantum algorithmic primitives, under the supervision of
-      <a href="https://scholar.google.com/citations?user=QKyb_9oAAAAJ&hl=en" style="color:red;"> Professor Isaac Chuang</a>.
-      Before this, I was the first non-founding employee at a stealth quantum/machine learning startup (I took a gap year from 2022-2023 to do this), and
-      before that I was a research intern at <a href="https://www.xanadu.ai/">Xanadu</a>, a quantum computing company located in Toronto, developing
-      quantum algorithms for performing chemical calculations.
+  <p>I am (as of Fall 2024) a fourth-year pure mathematics student at the University of Toronto. 
+    Right now, I'm working at <a href="https://www.xanadu.ai/">Xanadu</a>, a quantum computing company located in Toronto, on fault-tolerant quantum algorithm research.
+    </p>
+    <p>
+      Before this, I worked at the Massachusetts Institute of Technology on the theory of quantum algorithmic primitives, under the supervision of
+      <a href="https://scholar.google.com/citations?user=QKyb_9oAAAAJ&hl=en" style="color:red;"> Professor Isaac Chuang</a>, and before that 
+      I was the first non-founding employee (although admittedly a less important one than subsequent hardware-genius hires) at <a href="https://extropic.ai">Extropic</a> (I took a gap year from 2022-2023 to do this).
     </p>
 
     <p>Outside of my primary job/education, I do research with <a href="https://scholar.google.ca/citations?user=DSgKHOQAAAAJ&hl=en">Professor Nathan Wiebe</a> on quantum algorithms.
-        Broadly, my academic interests are related to the synthesis of pure mathematics with fault-tolerant quantum algorithms and quantum simulation, as well as <a href="https://scholar.google.com/citations?user=PRjgI8kAAAAJ&hl=en">complexity</a>.
-    </p>
-    <p>For my CV, click <a href="./cv.pdf">here</a>. It's probably at least somewhat out of date at any given point in time.
+        My mathematical interests are mostly geometric and topological in flavour. Right now, I am particularly interested in Hamiltonian systems, Lie algebroids, and K-theory.
+         I also like to think about the synthesis of pure mathematics with fault-tolerant quantum algorithms and quantum simulation, as well as <a href="https://scholar.google.com/citations?user=PRjgI8kAAAAJ&hl=en">complexity</a>.
     </p>
 
     <h4 style="margin-top:40px;">I sometimes write stuff online</h4>
-    <p><b>New:</b> Check out my new-and-improved knowledge repository, <a href="https://thecoherentstate.github.io">The Coherent State</a>. I'm planning on writing a lot more here, in the near future.</p>
-    <p><a href="https://github.com/Lucaman99">Github</a> | <a href="https://jackceroni.substack.com/">Substack (Galt's Gulch)</a> | <a href="https://www.quora.com/profile/Jack-Ceroni">Quora</a> | <a href="https://lucaman99.github.io/new_blog">Blog</a> | <a href="https://stackexchange.com/users/14606850/jack-ceroni">Stack Exchange</a> | <a href="https://en.wikipedia.org/wiki/User:JackCer9">Wikipedia</a> | <a href="https://scholar.google.com/citations?user=I9NmuAsAAAAJ&hl=en">Google Scholar</a></p>
+    <p>This is my "knowledge repository": <a href="https://thecoherentstate.github.io">The Coherent State</a>. I actually have a lot of content on this site, but it's not 
+      very accessible via the home page. Hopefully I fix this soon!</p>
+    <p>Read my book reviews (or else): <a href="https://www.instagram.com/blacklodgebookreviews/">Black Lodge Book Reviews</a></p>
+    <p><a href="https://github.com/Lucaman99">Github</a> | <a href="https://stackexchange.com/users/14606850/jack-ceroni">Stack Exchange</a> | <a href="https://en.wikipedia.org/wiki/User:JackCer9">Wikipedia</a> | <a href="https://scholar.google.com/citations?user=I9NmuAsAAAAJ&hl=en">Google Scholar</a></p>
     <p>Send me an email: <a href="MAILTO:jackceroni@gmail.com">jackceroni@gmail.com</a>
     </p>
 
