--- a/index.html
+++ b/index.html
@@ -1,64 +1,64 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
+<!DOCTYPE html>
 <html>
-<head>
-<title>Website</title>
-<script type="text/x-mathjax-config">
-  MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
-</script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML" id="">
-</script>
-<link rel="stylesheet" href="https://latex.now.sh/style.css">
-</head>
-
-<body style="max-width:100ch">
-	<header>
-		<center>
-		<h2>Jack Ceroni's Home Page</h2>
-		</center>
-	</header>
-	<h3>About</h3>
-  <p>I am (as of Fall 2024) a fourth-year pure mathematics student at the University of Toronto. 
-    Right now, I'm working at <a href="https://www.xanadu.ai/">Xanadu</a>, a quantum computing company located in Toronto, on fault-tolerant quantum algorithm research.
-    </p>
-    <p>
-      Before this, I worked at the Massachusetts Institute of Technology on the theory of quantum algorithmic primitives, under the supervision of
-      <a href="https://scholar.google.com/citations?user=QKyb_9oAAAAJ&hl=en" style="color:red;"> Professor Isaac Chuang</a>, and before that 
-      I was the first non-founding employee (although admittedly a less important one than subsequent hardware-genius hires) at <a href="https://extropic.ai">Extropic</a> (I took a gap year from 2022-2023 to do this).
-    </p>
-
-    <p>Outside of my primary job/education, I do research with <a href="https://scholar.google.ca/citations?user=DSgKHOQAAAAJ&hl=en">Professor Nathan Wiebe</a> on quantum algorithms.
-        My mathematical interests are mostly geometric and topological in flavour. Right now, I am particularly interested in Hamiltonian systems, Lie algebroids, and K-theory.
-         I also like to think about the synthesis of pure mathematics with fault-tolerant quantum algorithms and quantum simulation, as well as <a href="https://scholar.google.com/citations?user=PRjgI8kAAAAJ&hl=en">complexity</a>.
-    </p>
-
-    <h4 style="margin-top:40px;">I sometimes write stuff online</h4>
-    <p>This is my "knowledge repository": <a href="https://thecoherentstate.github.io">The Coherent State</a>. I actually have a lot of content on this site, but it's not 
-      very accessible via the home page. Hopefully I fix this soon!</p>
-    <p>Read my book reviews (or else): <a href="https://www.instagram.com/blacklodgebookreviews/">Black Lodge Book Reviews</a></p>
-    <p><a href="https://github.com/Lucaman99">Github</a> | <a href="https://stackexchange.com/users/14606850/jack-ceroni">Stack Exchange</a> | <a href="https://en.wikipedia.org/wiki/User:JackCer9">Wikipedia</a> | <a href="https://scholar.google.com/citations?user=I9NmuAsAAAAJ&hl=en">Google Scholar</a></p>
-    <p>Send me an email: <a href="MAILTO:jackceroni@gmail.com">jackceroni@gmail.com</a>
-    </p>
-
-    <br>
-
-    <center> 
-        <i>Some inspiration. Taken during trips to Italy, England, Greece. A reminder to create beautiful things.</i>
-        </center>
-        <br>
-        <div class="row" style="display:flex;padding-bottom:10px;">
-        <img src="./assets/duomo.JPG" style="height:500px;">
-        <img src="./assets/england.jpg" style="height:500px;padding-left:10px;">
-    </div>
-        <img src="./assets/athens.jpeg">
-        </body>
-
+    <head>
+        <title>Website</title>
+        <script type="text/x-mathjax-config;executed=true">
+            MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
+          </script>
+          <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML" id=""></script>
+          <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+          <div id="MathJax_Message" style="display: none;"></div>
+    </head>
+    <body>
+        <h1>Jack Ceroni's Home Page</h1>
+        <hr>
+        <h2>About</h2>
+        <img src="./jack.jpeg", style="width:200px;float:right;margin-left:10px;">
+        <p>
+            I am currently a fourth-year pure mathematics student at the University of Toronto.
+            <br><br>
+            My research interests are broadly related to symplectic and Riemannian geometry, mathematical physics, algebraic topology, K-theory, and discrete complex analysis/geometry. Much of my previous 
+            research has been in the fields of quantum algorithms and quantum information, and I continue to be very interested in using powerful techniques 
+            from mathematics to address questions in these fields. 
+        </p>
+        <h2>Papers</h2>
+        <ul>
+            <li><b>Non-Markov quantum belief propagation</b> (with Ian MacCormack and Guillaume Verdon) <a href="https://journals.aps.org/pra/abstract/10.1103/PhysRevA.110.012435">Phys. Rev. A 110, 012435</a></li> 
+            <li><b>Modular quantum signal processing in many variables</b> (with Zane Rossi and Isaac Chuang) <a href="https://arxiv.org/abs/2309.16665"> arXiv:2309.16665</a></li>
+        </ul>
+        <h2>Talks</h2>
+        <ul>
+            <li><b>An A-infinity algebra generalization of the De Rham theorem</b> (Fields Institute Geometric Structures Laboratory Seminar) <a href="http://www.fields.utoronto.ca/talks/A_infty-algebra-generalization-De-Rham-theorem">Link</a></li>
+        </ul>
+        <h2>Other Links</h2>
+        <p>My "knowledge repository" can be found here: <a href="https://thecoherentstate.github.io/directory/index.html">The Coherent State</a>. This is where I compile and organize all of my notes/solutions/other math-related materials.</p>
+        <p>
+            I sometimes write stuff online...read at your own peril.
+            <ul>
+                <li><a href="#">Dark Star (Substack)</a></li>
+                <li><a href="#">Stack Exchange</a></li>
+                <li><a href="#">Github</a></li>
+                <li><a href="#">Google Scholar</a></li>
+            </ul>
+        <p>
+        <p>Send me an email: <a href="MAILTO:jackceroni@gmail.com">jackceroni@gmail.com</a></p>
+        <h2>Miscellaneous</h2>
+        <ul>
+            <li>I used to work at <a href="https://xanadu.ai">Xanadu</a>, as well as <a href="https://extropic.ai">Extropic</a>. 
+                Both companies are very cool and have done a lot for me. Check them out!</li>
+            <li>If you're a high school student who likes math and physics, speaking from personal experience, I really recommend learning about quantum computing. Certain aspects of 
+                it are very accessible with a bit of linear algebra knowledge, plus you can actually write code to test out ideas.
+            </li>
+            <li>You should probably try reading <i>Atlas Shrugged</i> with a very open mind.</li>
+            <li><a href="#">Here</a> are some of my older, shorter book reviews.</li>
+            <li>Follow me on <a href="#">X</a>, if you want.</li>
+        </ul>
+    </body>
+    <style>
+        body {
+            margin-left:20%;
+            margin-right:20%;
+            margin-top:30px;
+        }
+    </style>
 </html>
-<style>
-  body {
-    background-color: black;
-    color:white;
-  }
-  a {
-    color:red !important;
-  }
-</style>
