--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <p>
             I am currently a fourth-year pure mathematics student at the University of Toronto.
             <br><br>
-            My research interests are broadly related to symplectic and Riemannian geometry, mathematical physics, algebraic topology, K-theory, and discrete complex analysis/geometry. Much of my previous 
+            My research interests are broadly related to symplectic and Riemannian geometry, algebraic geometry, mathematical physics, algebraic topology, and discrete complex analysis/geometry. Much of my previous 
             research has been in the fields of quantum algorithms and quantum information, and I continue to be very interested in using powerful techniques 
             from mathematics to address questions in these fields. 
         </p>
@@ -30,8 +30,15 @@
         <ul>
             <li><b>An A-infinity algebra generalization of the De Rham theorem</b> (Fields Institute Geometric Structures Laboratory Seminar) <a href="http://www.fields.utoronto.ca/talks/A_infty-algebra-generalization-De-Rham-theorem">Link</a></li>
         </ul>
+        <h2>Notes and Academic Writings</h2>
+        <ul>
+            <li><a href="https://thecoherentstate.github.io/directory/soul_conjecture.pdf">Perelman's proof of the soul conjecture</a>, my final project for MAT464 (Riemannian Geometry) taught at the University of Toronto in Fall 2024 by
+            Prof. Fedya Manin</li>
+            <li><a href="#">A proof of the Myers-Steenrod theorem</a></li>
+            <!--  <li><a href="#">Notes on introductory symplectic geometry and topology</a></li>
+            <li><a href="#">Nilpotent connections and the monodromy theorem</a>, my senior undergraduate thesis at the University of Toronto, advised by Prof. Daniel Litt. -->
+        </ul>
         <h2>Other Links</h2>
-        <p>My "knowledge repository" can be found here: <a href="https://thecoherentstate.github.io/directory/index.html">The Coherent State</a>. This is where I compile and organize all of my notes/solutions/other math-related materials.</p>
         <p>
             I sometimes write stuff online...read at your own peril.
             <ul>
@@ -49,7 +56,7 @@
             <li>If you're a high school student who likes math and physics, speaking from personal experience, I really recommend learning about quantum computing. Certain aspects of 
                 it are very accessible with a bit of linear algebra knowledge, plus you can actually write code to test out ideas.
             </li>
-            <li>You should probably try reading <i>Atlas Shrugged</i> with a very open mind.</li>
+            <li>Try reading <i>Atlas Shrugged</i> with a very open mind.</li>
             <li><a href="#">Here</a> are some of my older, shorter book reviews.</li>
             <li>Follow me on <a href="#">X</a>, if you want.</li>
         </ul>
