--- a/index.html
+++ b/index.html
@@ -31,21 +31,16 @@
             <li><b>An A-infinity algebra generalization of the De Rham theorem</b> (Fields Institute Geometric Structures Laboratory Seminar) <a href="http://www.fields.utoronto.ca/talks/A_infty-algebra-generalization-De-Rham-theorem">Link</a></li>
         </ul>
         <h2>Notes and Academic Writings</h2>
-        <ul>
-            <li><a href="https://thecoherentstate.github.io/directory/soul_conjecture.pdf">Perelman's proof of the soul conjecture</a>, my final project for MAT464 (Riemannian Geometry) taught at the University of Toronto in Fall 2024 by
-            Prof. Fedya Manin</li>
-            <li><a href="#">A proof of the Myers-Steenrod theorem</a></li>
-            <!--  <li><a href="#">Notes on introductory symplectic geometry and topology</a></li>
-            <li><a href="#">Nilpotent connections and the monodromy theorem</a>, my senior undergraduate thesis at the University of Toronto, advised by Prof. Daniel Litt. -->
-        </ul>
+        <p>This is the website where I organize all of my notes: <a href="https://thecoherentstate.github.io/directory">The Coherent State</a></p>
+
         <h2>Other Links</h2>
         <p>
             I sometimes write stuff online...read at your own peril.
             <ul>
-                <li><a href="#">Dark Star (Substack)</a></li>
-                <li><a href="#">Stack Exchange</a></li>
-                <li><a href="#">Github</a></li>
-                <li><a href="#">Google Scholar</a></li>
+                <li><a href="https://jackceroni.substack.com/">Dark Star (Substack)</a></li>
+                <li><a href="https://math.stackexchange.com/users/610522/jack-ceroni">Stack Exchange</a></li>
+                <li><a href="https://github.com/Lucaman99">Github</a></li>
+                <li><a href="https://scholar.google.com/citations?user=I9NmuAsAAAAJ&hl=en">Google Scholar</a></li>
             </ul>
         <p>
         <p>Send me an email: <a href="MAILTO:jackceroni@gmail.com">jackceroni@gmail.com</a></p>
@@ -58,7 +53,7 @@
             </li>
             <li>Try reading <i>Atlas Shrugged</i> with a very open mind.</li>
             <li><a href="#">Here</a> are some of my older, shorter book reviews.</li>
-            <li>Follow me on <a href="#">X</a>, if you want.</li>
+            <li>Follow me on <a href="https://x.com/jack_ceroni">X</a>, if you want.</li>
         </ul>
     </body>
     <style>
