--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h2>About</h2>
         <img src="./jack.jpeg", style="width:200px;float:right;margin-left:10px;">
         <p>
-            I am currently a fourth-year pure mathematics student at the University of Toronto.
+            I am currently a fourth-year pure mathematics student at the University of Toronto. In the Fall of 2025, I will be starting my PhD at the University of Chicago.
             <br><br>
             My research interests are broadly related to symplectic and Riemannian geometry, algebraic geometry, mathematical physics, algebraic topology, and discrete complex analysis/geometry. Much of my previous 
             research has been in the fields of quantum algorithms and quantum information, and I continue to be very interested in using powerful techniques 
