--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
         <h2>About</h2>
         <img src="./jack.jpeg", style="width:200px;float:right;margin-left:10px;">
         <p>
-            I am currently a fourth-year pure mathematics student at the University of Toronto. In the Fall of 2025, I will be starting my PhD at the University of Chicago.
+            In the Fall of 2025, I will be starting my PhD at the University of Chicago. Prior to this, I was an undergraduate student at the University of Toronto.
             <br><br>
-            My research interests are broadly related to symplectic and Riemannian geometry, algebraic geometry, mathematical physics, algebraic topology, and discrete complex analysis/geometry. Much of my previous 
-            research has been in the fields of quantum algorithms and quantum information, and I continue to be very interested in using powerful techniques 
-            from mathematics to address questions in these fields. 
+            My research interests are broadly related to symplectic and Riemannian geometry, algebraic geometry, algebraic topology, and mathematical physics. Much of my undergraduate
+            research was in quantum algorithms and quantum information, but this is no longer my main focus.
         </p>
         <h2>Papers</h2>
         <ul>
@@ -43,7 +42,7 @@
                 <li><a href="https://scholar.google.com/citations?user=I9NmuAsAAAAJ&hl=en">Google Scholar</a></li>
             </ul>
         <p>
-        <p>Send me an email: <a href="MAILTO:jackceroni@gmail.com">jackceroni@gmail.com</a></p>
+        <p>Send me an email: <a href="MAILTO:jceroni@uchicago.edu">jceroni@uchicago.edu</a></p>
         <h2>Miscellaneous</h2>
         <ul>
             <li>I used to work at <a href="https://xanadu.ai">Xanadu</a>, as well as <a href="https://extropic.ai">Extropic</a>. 
@@ -51,8 +50,6 @@
             <li>If you're a high school student who likes math and physics, speaking from personal experience, I really recommend learning about quantum computing. Certain aspects of 
                 it are very accessible with a bit of linear algebra knowledge, plus you can actually write code to test out ideas.
             </li>
-            <li>Try reading <i>Atlas Shrugged</i> with a very open mind.</li>
-            <li><a href="#">Here</a> are some of my older, shorter book reviews.</li>
             <li>Follow me on <a href="https://x.com/jack_ceroni">X</a>, if you want.</li>
         </ul>
     </body>
