--- a/index.html
+++ b/index.html
@@ -17,20 +17,25 @@
         <p>
             In the Fall of 2025, I will be starting my PhD at the University of Chicago. Prior to this, I was an undergraduate student at the University of Toronto.
             <br><br>
-            My research interests are broadly related to symplectic and Riemannian geometry, algebraic geometry, algebraic topology, and mathematical physics. Much of my undergraduate
+            My research interests are (very broadly) related to differential and algebraic topology/geometry and mathematical physics. Much of my undergraduate
             research was in quantum algorithms and quantum information, but this is no longer my main focus.
         </p>
         <h2>Papers</h2>
         <ul>
             <li><b>Non-Markov quantum belief propagation</b> (with Ian MacCormack and Guillaume Verdon) <a href="https://journals.aps.org/pra/abstract/10.1103/PhysRevA.110.012435">Phys. Rev. A 110, 012435</a></li> 
-            <li><b>Modular quantum signal processing in many variables</b> (with Zane Rossi and Isaac Chuang) <a href="https://arxiv.org/abs/2309.16665"> arXiv:2309.16665</a></li>
+            <li><b>Modular quantum signal processing in many variables</b> (with Zane Rossi and Isaac Chuang) <a href="https://quantum-journal.org/papers/q-2025-06-18-1776/"> Quantum 9, 1776</a></li>
         </ul>
         <h2>Talks</h2>
         <ul>
             <li><b>An A-infinity algebra generalization of the De Rham theorem</b> (Fields Institute Geometric Structures Laboratory Seminar) <a href="http://www.fields.utoronto.ca/talks/A_infty-algebra-generalization-De-Rham-theorem">Link</a></li>
         </ul>
         <h2>Notes and Academic Writings</h2>
-        <p>This is the website where I organize all of my notes: <a href="https://thecoherentstate.github.io/directory">The Coherent State</a></p>
+
+        <ul>
+            <li>Here is a link to my <a href="https://thecoherentstate.github.io/directory/mathblog/index.html">math blog</a>, where I do most of my writing these days</li>
+            <li>Solutions to McDuff and Salamon's <i>Introduction to Symplectic Topology</i> <b>[WIP]</b> <a href="https://thecoherentstate.github.io/directory/pdf/mcduff_salamon.pdf">(pdf)</a> </li>
+            <li>Perelman's proof of the Soul Conjecture, final project for MAT464 (Riemannian geometry) at the University of Toronto <a href="https://thecoherentstate.github.io/directory/pdf/soul_conjecture.pdf">(pdf)</a> </li>
+        </ul>
 
         <h2>Other Links</h2>
         <p>
