--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
             <li><b>Non-Markov quantum belief propagation</b> (with Ian MacCormack and Guillaume Verdon) <a href="https://journals.aps.org/pra/abstract/10.1103/PhysRevA.110.012435">Phys. Rev. A 110, 012435</a></li> 
             <li><b>Modular quantum signal processing in many variables</b> (with Zane Rossi and Isaac Chuang) <a href="https://quantum-journal.org/papers/q-2025-06-18-1776/"> Quantum 9, 1776</a></li>
         </ul>
-        <h2>Talks</h2>
+        <a href="https://scholar.google.com/citations?user=I9NmuAsAAAAJ&hl=en">Google Scholar</a></li>            
+            <h2>Talks</h2>
         <ul>
             <li><b>An A-infinity algebra generalization of the De Rham theorem</b> (Fields Institute Geometric Structures Laboratory Seminar) <a href="http://www.fields.utoronto.ca/talks/A_infty-algebra-generalization-De-Rham-theorem">Link</a></li>
         </ul>
@@ -38,14 +39,9 @@
         </ul>
 
         <h2>Other Links</h2>
+       <!--  <a href="">The UChicago Don DeLillo book club (Fall 2025)</a>-->
         <p>
-            I sometimes write stuff online...read at your own peril.
-            <ul>
-                <li><a href="https://jackceroni.substack.com/">Dark Star (Substack)</a></li>
-                <li><a href="https://math.stackexchange.com/users/610522/jack-ceroni">Stack Exchange</a></li>
-                <li><a href="https://github.com/Lucaman99">Github</a></li>
-                <li><a href="https://scholar.google.com/citations?user=I9NmuAsAAAAJ&hl=en">Google Scholar</a></li>
-            </ul>
+            I sometimes write stuff online...read at your own peril. <a href="https://jackceroni.substack.com/">Dark Star (Substack)</a>
         <p>
         <p>Send me an email: <a href="MAILTO:jceroni@uchicago.edu">jceroni@uchicago.edu</a></p>
         <h2>Miscellaneous</h2>
