--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             My research interests are (very broadly) related to differential and algebraic topology/geometry and mathematical physics. Much of my undergraduate
             research was in quantum algorithms and quantum information, but this is no longer my main focus.
             <br>
-            <p>Send me an email, if you want: <a href="MAILTO:jceroni@uchicago.edu">jceroni@uchicago.edu</a></p>
+            <p>Send me an email, if you want: <a href="MAILTO:jceroni@uchicago.edu">jceroni@uchicago.edu</a> | <a href="https://mathematics.uchicago.edu/people/profile/jack-luca-ceroni/">UChicago math department page</a></p>
         </p>
         <h2>Papers</h2>
         <ul>
@@ -35,18 +35,18 @@
         <h2>Notes and Academic Writings</h2>
 
         <ul>
-            <li>Here is a link to my <a href="https://thecoherentstate.github.io/directory/mathblog/index.html">math blog</a>, where I write about random things</li>
+            <li>Here is a link to my <a href="./mathblog/index.html">math blog</a>, where I write about random things</li>
             <li>
                 Here is a list of notes I have written for school/talks/learning/fun:
                 <ul>
-                    <li><a href="https://thecoherentstate.github.io/directory/pdf/soul_conjecture.pdf">Perelman's proof of the Soul Conjecture</a>, final project for MAT464 (Riemannian geometry) at the University of Toronto</li>
+                    <li><a href="./notes/soul_conjecture.pdf">Perelman's proof of the Soul Conjecture</a>, final project for MAT464 (Riemannian geometry) at the University of Toronto</li>
                 </ul>
             </li>
             <li>
                 Here are some solutions to exercises in various textbooks/other places:
                 <ul>
-                    <li><a href="#"><i>Algebraic Geometry</i> by Hartshorne</a></li>
-                    <li><a href="https://thecoherentstate.github.io/directory/pdf/mcduff_salamon.pdf"><i>Introduction to Symplectic Topology</i> by McDuff and Salamon</a></li>
+                    <li><a href="./solutions/hartshorne/index.html"><i>Algebraic Geometry</i> by Hartshorne</a></li>
+                    <li><a href="#"><i>Introduction to Symplectic Topology</i> by McDuff and Salamon</a></li>
                 </ul>
             </li>
         </ul>
@@ -55,9 +55,6 @@
             <li> I sometimes write stuff online...read at your own peril. <a href="https://jackceroni.substack.com/">Dark Star (Substack)</a></li>
                 <li>I used to work at <a href="https://xanadu.ai">Xanadu</a>, as well as <a href="https://extropic.ai">Extropic</a>. 
                 Both companies are very cool and have done a lot for me. Check them out!</li>
-            <li>If you're a high school student who likes math and physics, speaking from personal experience, I really recommend learning about quantum computing. Certain aspects of 
-                it are very accessible with a bit of linear algebra knowledge, plus you can actually write code to test out ideas.
-            </li>
             <li>My super secret <a href="https://x.com/jack_ceroni">Twitter</a></li>
         </ul>
     </body>
