--- a/mathblog/ag_connection.html
+++ b/mathblog/ag_connection.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-07-17 Thu 20:15 -->
+<!-- 2025-08-11 Mon 00:26 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>The connection between varieties and schemes: part 1</title>
@@ -195,7 +195,7 @@
   .org-svg { }
 </style>
 <link rel="stylesheet" type="text/css" href="https://gongzhitaao.org/orgcss/org.css"/>
-<style> body {font-size:15px;} </style>
+<style> body {font-size:15px;background-color:#FDF7D6} a {color:blue;}  </style>
 <script>
   window.MathJax = {
     tex: {
@@ -236,9 +236,9 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org7f2555d">1. Introduction</a></li>
-<li><a href="#org2225670">2. A few basic facts</a></li>
-<li><a href="#orgfabdbea">3. Constructing the functor</a></li>
+<li><a href="#org47af730">1. Introduction</a></li>
+<li><a href="#org177b48b">2. A few basic facts</a></li>
+<li><a href="#org00d7843">3. Constructing the functor</a></li>
 </ul>
 </div>
 </div>
@@ -248,8 +248,8 @@
 
 <hr />
 
-<div id="outline-container-org7f2555d" class="outline-2">
-<h2 id="org7f2555d"><span class="section-number-2">1.</span> Introduction</h2>
+<div id="outline-container-org47af730" class="outline-2">
+<h2 id="org47af730"><span class="section-number-2">1.</span> Introduction</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 If I don't write this (short) blog post right now, I will descend into madness. This simple idea need to be spelled out, explicitly, in my personal repository of knowledge, or else I will go off the deep end.
@@ -259,8 +259,8 @@ I'll discuss the image of this functor, so we can construct a true categorical e
 </div>
 </div>
 
-<div id="outline-container-org2225670" class="outline-2">
-<h2 id="org2225670"><span class="section-number-2">2.</span> A few basic facts</h2>
+<div id="outline-container-org177b48b" class="outline-2">
+<h2 id="org177b48b"><span class="section-number-2">2.</span> A few basic facts</h2>
 <div class="outline-text-2" id="text-2">
 <p>
 Before jumping into this, let's recall a few important facts about varieties, their coordinate rings, and the connection between the geometric properties of the variety, and the algebraic properties of the
@@ -398,7 +398,7 @@ above are inverses of one another, and all together, we have the following diagr
 </p>
 
 
-<div id="org0799c2b" class="figure">
+<div id="org036f5bc" class="figure">
 <p><img src="./assets/diag.png" alt="diag.png" width="750px" />
 </p>
 </div>
@@ -440,8 +440,8 @@ However, if we were instead to look at the broader collection of <i>prime</i> id
 </div>
 </div>
 
-<div id="outline-container-orgfabdbea" class="outline-2">
-<h2 id="orgfabdbea"><span class="section-number-2">3.</span> Constructing the functor</h2>
+<div id="outline-container-org00d7843" class="outline-2">
+<h2 id="org00d7843"><span class="section-number-2">3.</span> Constructing the functor</h2>
 <div class="outline-text-2" id="text-3">
 <p>
 <b>Remark 3.1.</b> Just like a projective variety is locally an affine variety, we know that a scheme is a space which is locally a ring spectrum. We wish to exhibit some sort of correspondence between
@@ -741,7 +741,7 @@ Now, the only thing left to prove is that this functor is fully faithful.
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Jack Ceroni</p>
-<p class="date">Created: 2025-07-17 Thu 20:15</p>
+<p class="date">Created: 2025-08-11 Mon 00:26</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
